<resources>
    <string name="app_name">Farmy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="royxatdan_otish">Ro\'yxatdan o\'tish</string>
    <string name="tasdiqlash">Tasdiqlash</string>
    <string name="hisob">Hisobingizga kiring</string>
    <string name="back_to_previous_page">Back to previous page</string>
    <string name="_998">+998 </string>
    <string name="kod_yaroqlilik_muddati">Kod yaroqlilik muddati 60 soniya</string>
    <string name="______">------</string>
    <string name="telefon_raqamingiz">Sizning telefon raqamingiz\n+998 97–761–20–07</string>
    <string name="treatmen">Kasallik: Pomidor septoriyasi\nDavolash usuli: Kasal barglarni olib tashlang. Pastki infektsiyalangan barglarni olib tashlash mumkin. O\'simlik atrofida havo aylanishini yaxshilang. Yuqori sug\'orishdan foydalanmang. Yovvoyi o\'tlarni nazorat qiling. Fungitsid spreylardan foydalaning.</string>

</resources>