<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.welcome.auth.AuthFragment">

    <TextView
        android:id="@+id/tv_title"
        app:layout_constraintBottom_toBottomOf="@+id/iv_back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:text="@string/royxatdan_otish"
        android:textColor="@color/teal_200"
        android:textSize="24sp"
        android:textStyle="bold" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/hello"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="20dp" />

    <com.vicmikhailau.maskededittext.MaskedEditText
        android:id="@+id/etPhoneNumber"
        app:layout_constraintBottom_toTopOf="@+id/sendOTPBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView2"
        app:mask="+998 ##-###-##-##"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/et_backgroundshape"
        android:drawableStart="@drawable/ic_phone"
        android:drawablePadding="10dp"
        android:inputType="phone"
        android:paddingStart="10dp"
        android:text="@string/_998"
        android:textColor="@color/teal_200"
        android:textSize="22sp"
        tools:ignore="RtlSymmetry" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/sendOTPBtn"
        app:cornerRadius="24dp"
        app:iconTint="@color/teal_200"
        app:layout_constraintBottom_toTopOf="@+id/registeredAccount"
        app:layout_constraintEnd_toEndOf="@+id/tv_title"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/tasdiqlash"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/registeredAccount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/hisob"
        android:textColor="@color/teal_200"
        android:textSize="14sp" />


    <ImageView
        android:id="@+id/iv_back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/back_to_previous_page"
        android:src="@drawable/ic_back" />
</androidx.constraintlayout.widget.ConstraintLayout>